@@ -112,6 +112,7 @@
 	(position-callbacks . (,Beam::least_squares
 			       ,Beam::check_concave
 			       ,Beam::slope_damping
+			       ,Beam::shift_region_to_valid
 			       ,Beam::quanting
 			      ))
 
@@ -796,6 +797,8 @@
 	(molecule-callback . ,Stem::brew_molecule)
 	(thickness . 1.3)
 	(beamed-lengths . (0.0 2.5 2.0 1.5))
+
+	;; 
 	(beamed-minimum-lengths . (0.0 1.5 1.25 1.0))
 
 	;;  Stems in unnatural (forced) direction should be shortened,
