@@ -1,3 +1,9 @@
+2002-06-01  Han-Wen  <hanwen@cs.uu.nl>
+
+	* lily/beam.cc (shift_region_to_valid): Try to shift positions
+	after slope-damping and concaveness check, so that short-stems are
+	not violated.
+
 2002-06-01  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* lily/beam.cc (quanting): Increase REGION_SIZE to 4 by default.
